crates/ferrum-interfaces/tests/ui/vnext/fail/resource_transaction_is_not_clone.stderr
error[E0599]: no method named `clone` found for struct `ResourceTransaction<D, S>` in the current scope
 --> tests/ui/vnext/fail/resource_transaction_is_not_clone.rs:4:34
  |
4 |     let _duplicate = transaction.clone();
  |                                  ^^^^^ method not found in `ResourceTransaction<D, TransactionNew>`
